update responsive view for info-container

--- a/index.html
+++ b/index.html
@@ -18,77 +18,81 @@
   <body>
     <div class="container">
       <div class="info-container">
-        <div class="avatar-box">
-          <h1>240X240</h1>
-        </div>
-        <div class="name-box">
-          <h2>Monalisa Ashley</h2>
-        </div>
-        <div class="title-box">
-          <p>Ui/Ux Designer</p>
-        </div>
-        <div class="social-box">
-          <div class="icon-box">
-            <img src="assets/images/facebook.svg" alt="facebook" />
+        <div class="profile-container">
+          <div class="avatar-box">
+            <h1>240X240</h1>
           </div>
-          <div class="icon-box">
-            <img src="assets/images/twitter.svg" alt="twitter" />
+          <div class="name-box">
+            <h2>Monalisa Ashley</h2>
           </div>
-          <div class="icon-box">
-            <img src="assets/images/instagram.svg" alt="instagram" />
+          <div class="title-box">
+            <p>Ui/Ux Designer</p>
           </div>
-          <div class="icon-box">
-            <img src="assets/images/linkedin.svg" alt="linkedin" />
-          </div>
-        </div>
-        <div class="contact-box">
-          <div class="contact-box-item">
-            <div class="icon">
-              <img src="./assets/images/phone.svg" alt="phone" />
+          <div class="social-box">
+            <div class="icon-box">
+              <img src="assets/images/facebook.svg" alt="facebook" />
             </div>
-            <div class="content">
-              <span class="content-title">Phone</span>
-              <span class="content-body">+123 456 890</span>
+            <div class="icon-box">
+              <img src="assets/images/twitter.svg" alt="twitter" />
             </div>
-          </div>
-          <div class="barrier"></div>
-          <div class="contact-box-item">
-            <div class="icon">
-              <img src="./assets/images/mail.svg" alt="mail" />
+            <div class="icon-box">
+              <img src="assets/images/instagram.svg" alt="instagram" />
             </div>
-            <div class="content">
-              <span class="content-title">Email</span>
-              <span class="content-body">example@mail.com</span>
-            </div>
-          </div>
-          <div class="barrier"></div>
-          <div class="contact-box-item">
-            <div class="icon">
-              <img src="./assets/images/location.svg" alt="location" />
-            </div>
-            <div class="content">
-              <span class="content-title">Location</span>
-              <span class="content-body">Hong Kong China</span>
-            </div>
-          </div>
-          <div class="barrier"></div>
-          <div class="contact-box-item">
-            <div class="icon">
-              <img src="./assets/images/calendar.svg" alt="calendar" />
-            </div>
-            <div class="content">
-              <span class="content-title">Birthday</span>
-              <span class="content-body">May 27, 1990</span>
+            <div class="icon-box">
+              <img src="assets/images/linkedin.svg" alt="linkedin" />
             </div>
           </div>
         </div>
-        <div class="button-box">
-          <button>
-            <div class="icon">
-              <img src="./assets/images/download.svg" alt="download" />
+        <div class="detail-container">
+          <div class="contact-box">
+            <div class="contact-box-item">
+              <div class="icon">
+                <img src="./assets/images/phone.svg" alt="phone" />
+              </div>
+              <div class="content">
+                <span class="content-title">Phone</span>
+                <span class="content-body">+123 456 890</span>
+              </div>
             </div>
-            <span>Download CV</span>
-          </button>
+            <div class="barrier"></div>
+            <div class="contact-box-item">
+              <div class="icon">
+                <img src="./assets/images/mail.svg" alt="mail" />
+              </div>
+              <div class="content">
+                <span class="content-title">Email</span>
+                <span class="content-body">example@mail.com</span>
+              </div>
+            </div>
+            <div class="barrier"></div>
+            <div class="contact-box-item">
+              <div class="icon">
+                <img src="./assets/images/location.svg" alt="location" />
+              </div>
+              <div class="content">
+                <span class="content-title">Location</span>
+                <span class="content-body">Hong Kong China</span>
+              </div>
+            </div>
+            <div class="barrier"></div>
+            <div class="contact-box-item">
+              <div class="icon">
+                <img src="./assets/images/calendar.svg" alt="calendar" />
+              </div>
+              <div class="content">
+                <span class="content-title">Birthday</span>
+                <span class="content-body">May 27, 1990</span>
+              </div>
+            </div>
+          </div>
+          <div class="button-box">
+            <button>
+              <div class="icon">
+                <img src="./assets/images/download.svg" alt="download" />
+              </div>
+              <span>Download CV</span>
+            </button>
+          </div>
         </div>
       </div>
       <div class="main-container">
@@ -269,7 +273,7 @@
                 <div class="skill-graphics-item">
                   <div class="skill-description">
                     <span>ReactJS</span>
-                    <span>65%</span>
+                    <span>72%</span>
                   </div>
                   <div
                     class="skill-progress"
